tests/regression/200_COMPILER_FEATURES/210_PARSER/210_059_reject_tilde_after_pipe_forward/expected.txt
error[KORU010]: stray continuation line without Koru construct
  --> tests/regression/200_COMPILER_FEATURES/210_PARSER/210_059_reject_tilde_after_pipe_forward/input.kz:9:1
    |
  9 | |> is not valid Koru
    | ^

error[PARSE001]: Pipeline continuation '|>' requires a step. Nested flows (~) are not allowed here.
  --> tests/regression/200_COMPILER_FEATURES/210_PARSER/210_059_reject_tilde_after_pipe_forward/input.kz:11:0
    |
 11 | |>
    | ^
